Fix color contrast issue with blue color

--- a/src/styles/base/_variables.css
+++ b/src/styles/base/_variables.css
@@ -122,7 +122,7 @@ Adapted from: https://github.com/tachyons-css/tachyons/blob/master/src/_skins.cs
   --light-green: #9eebcf;
   --navy: #001b44;
   --dark-blue: #00449e;
-  --blue: #357edd;
+  --blue: #3175cf;
   --light-blue: #96ccff;
   --lightest-blue: #cdecff;
   --washed-blue: #f6fffe;
